# src/app/api/models.ts
@@ -1,6 +1,8 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { ActionRequest } from './models/action-request';
+export type { ActionResponse } from './models/action-response';
 export type { ChunkData } from './models/chunk-data';
 export type { ChunkResponse } from './models/chunk-response';
 export type { HealthResponse } from './models/health-response';
